# ros2_android

./: .gitignore  .travis.yml  README.md
rclandroid/: build.gradle  package.xml
rclandroid/gradle/wrapper/: gradle-wrapper.properties
rclandroid/src/androidTest/: AndroidManifest.xml
rclandroid/src/androidTest/java/org/ros2/android/core/: BaseRosServiceTest.java  NodeMainExecutorServiceTest.java  RosManagerTest.java  RosServiceTest.java
rclandroid/src/androidTest/java/org/ros2/android/core/mock/: MockRosService.java
rclandroid/src/main/: AndroidManifest.xml
rclandroid/src/main/java/org/ros2/android/core/: AbstractRosApplication.java  BaseRosActivity.java  BaseRosApplication.java  BaseRosService.java  NodeMainExecutor.java  NodeMainExecutorService.java  RosActivity.java  RosConfig.java  RosManager.java  RosService.java
rclandroid/src/main/java/org/ros2/android/core/node/: AndroidNativeNode.java  AndroidNode.java  NodeAndroid.java  NodeManager.java
rclandroid/src/main/java/org/ros2/android/core/tmp/: Subscriber.java
rclandroid/src/main/java/org/ros2/android/hardware/sensor/: AbstractSensorAdapter.java  AbstractSensorNode.java  AccelerometerSensorAdapter.java  AmbientTemperatureSensorAdapter.java  BarometerSensorAdapter.java  CameraSensorAdapter.java  CompassSensorAdapter.java  GyroscopeSensorAdapter.java  ImuSensorAdapter.java  LightSensorAdapter.java  ProximitySensorAdapter.java  RotationVectorSensorAdapter.java  SensorAdapter.java  SensorNode.java
rclandroid/src/main/res/: AndroidManifest.xml
scripts/: android.toolchain.cmake
(+5 files in other folders)
